Oppdaterte avhengighetsstyring for delte og modulspesifikke avhengigheter; refaktorerte og standardiserte build-filer.